--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -30,8 +30,9 @@ jobs:
           key: import-assets-${{ runner.os }}-${{ github.sha }}
       - name: install wine
         run: |
-          sudo apt install wine64
-          echo "WINE_PATH=$(which wine64)" >> $GITHUB_ENV
+            sudo apt-get update
+            sudo apt-get install --fix-missing wine64
+            echo "WINE_PATH=$(which wine64)" >> $GITHUB_ENV
       - name: Export Game using Godot
         uses: firebelley/godot-export@v5.2.1
         with:
@@ -46,72 +47,7 @@ jobs:
         with:
           name: HTML5
           path: /home/runner/.local/share/godot/archives/HTML5.zip
-      - name: Upload Linux
-        uses: actions/upload-artifact@v4
-        with:
-          name: LinuxX11
-          path: /home/runner/.local/share/godot/archives/LinuxX11.zip
-      - name: Upload Windows
-        uses: actions/upload-artifact@v4
-        with:
-          name: Windows
-          path: /home/runner/.local/share/godot/archives/Windows.zip
-      - name: Upload MacOS
-        uses: actions/upload-artifact@v4
-        with:
-          name: macOS
-          path: /home/runner/.local/share/godot/archives/macOS.zip
 
-  deploy-to-itchio-linux:
-    runs-on: ubuntu-latest
-    needs: export-game
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: LinuxX11
-      - name: Deploy to Itch.io (Windows)
-        uses: manleydev/butler-publish-itchio-action@master
-        env:
-          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_API_KEY }}
-          CHANNEL: linux
-          ITCH_GAME: ${{ secrets.ITCHIO_GAME }}
-          ITCH_USER: ${{ secrets.ITCHIO_USERNAME }}
-          PACKAGE: LinuxX11.zip
-
-  deploy-to-itchio-windows:
-    runs-on: ubuntu-latest
-    needs: export-game
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: Windows
-      - name: Deploy to Itch.io (Windows)
-        uses: manleydev/butler-publish-itchio-action@master
-        env:
-          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_API_KEY }}
-          CHANNEL: windows
-          ITCH_GAME: ${{ secrets.ITCHIO_GAME }}
-          ITCH_USER: ${{ secrets.ITCHIO_USERNAME }}
-          PACKAGE: Windows.zip
-
-  deploy-to-itchio-mac:
-    runs-on: ubuntu-latest
-    needs: export-game
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: macOS
-      - name: Deploy to Itch.io (MacOS)
-        uses: manleydev/butler-publish-itchio-action@master
-        env:
-          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_API_KEY }}
-          CHANNEL: mac
-          ITCH_GAME: ${{ secrets.ITCHIO_GAME }}
-          ITCH_USER: ${{ secrets.ITCHIO_USERNAME }}
-          PACKAGE: macOS.zip
 
   deploy-to-itchio-web:
     runs-on: ubuntu-latest
